# RobotDream-CV2-Diploma

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
app/: __init__.py  app.py
app/domain/: __init__.py  config.py  events.py  models.py
app/pipeline/: __init__.py  detector.py  guidance.py  orchestrator.py  renderer.py  tracker.py  video_io.py
app/services/: export_service.py  metadata_service.py  profile_service.py
app/ui/: controls.py  state.py  views.py
app/utils/: logging_utils.py  math_utils.py
configs/camera_profiles/: standard_rectilinear.toml  wide_angle_drone.toml
configs/drone_profiles/: multicopter_center_camera.toml  multicopter_offset_camera.toml  plane_offset_camera.toml
configs/target_profiles/: gerbera.toml  shahed_136.toml  zala_kub_bla.toml
docs/decisions/: 0001-foundation-shape.md  2026-04-13-guidance-session-note.md  benchmark-log-2026-04-12.md
docs/milestones/: roadmap.md
docs/specs/: milestone-01-skeleton-and-spec-foundation.md
tests/fixtures/: README.md
tests/integration/: test_orchestrator.py
tests/ui/: app.smoke.spec.js
tests/unit/: test_config.py  test_embedded_player_script.py  test_guidance.py  test_profiles.py  test_tracker.py  test_ui_state.py  test_video_io.py  test_views.py
