[project]
name = "drone-tracking-demo"
version = "0.1.0"
description = "Streamlit-based diploma MVP for drone detection, approval, tracking, and guidance from prerecorded video."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "I. Bovkun" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.drone_tracking]
title = "Drone Detection, Approval, Tracking, and Guidance Demo from Prerecorded Video"
current_milestone = "Milestones 6/7 - Bridge tracking and runtime overlays after detector integration"
ui_entrypoint = "app/app.py"
requirements_file = "requirements.txt"
outputs_dir = "outputs"
specs_dir = "docs/specs"
milestones_dir = "docs/milestones"
decisions_dir = "docs/decisions"
tests_dir = "tests"
default_detection_threshold = 0.55
default_frame_sampling_interval = 3
default_tracker_max_missed_refreshes = 3
default_camera_profile = "daylight"
supported_camera_profiles = ["daylight", "thermal"]
supported_video_formats = ["mp4", "mov", "avi"]
relative_paths_only = true
portable_notes = "Keep all paths repo-relative so the same clone works on macOS and Windows without local edits."

[tool.drone_tracking.runtime_presets.daylight_gui_boom_zoom]
reference_video = "test-videos/daytime-color-shahed-boom-zoom.MP4"
camera_profile = "daylight"
detector_backend = "yolo"
detection_threshold = 0.55
frame_sampling_interval = 3
tracker_max_missed_refreshes = 3
notes = "Current GUI default candidate after daylight validation; higher precision while keeping tracking loss within 20 percent on daytime clips."

[tool.drone_tracking.runtime_presets.daylight_from_behind_research]
reference_video = "test-videos/daytime-color-shahed-from-behind.mp4"
camera_profile = "daylight"
detector_backend = "yolo"
detection_threshold = 0.45
frame_sampling_interval = 3
tracker_max_missed_refreshes = 3
notes = "Hard-case daylight clip kept for future detector-refresh and tracker improvements."
